--- a/.env
+++ b/.env
@@ -37,10 +37,10 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = localhost
-database.default.database = crud-api
-database.default.username = root
-database.default.password = 
+database.default.hostname = us-cdbr-east-05.cleardb.net
+database.default.database = heroku_39e53c2ac18d00b
+database.default.username = b977c2e96a07ce
+database.default.password = 22d61bd1
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 
